--- a/index.html
+++ b/index.html
@@ -4,86 +4,175 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href = "https://fonts.googleapis.com/css?family= Roboto & display = swap" rel = "stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="
     sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="https://fonts.googleapis.com/css?family= Roboto & display = swap" href="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
             integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
     </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="
+sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="styles.css">
+    <title>title</title>
 
 </head>
 <body>
-<h1>LISTE DES CLIENTS</h1>
 
 
-
+<div class="card text-center">
+    <h1>LISTE DES ETUDIANTS</h1>
+</div>
 <div class="container">
     <div class="row">
-        <div class="col-sm">
-            Noms et Prenom
-        </div>
-        <div class="col-sm">
-            Adresse
-        </div>
-        <div class="col-sm">
-            N° Téléphonne
-
-        </div>
     </div>
 </div>
-
-<div class="table-responsive">
-    <table class="table">
-        ...
-    </table>
-</div>
-
-<table class="table table-bordered ">
+    <div class="table-responsive">
+        <table class="table">
+        </table>
+    </div>
     <table class="table table-bordered ">
 
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Mise à jour</h5>
+                <button type="button" class="btn btn-success">Success</button>
+            </div>
+        </div>
+    </table>
+    <table class="table">
+        <tr>
+            <th> N°</th>
+            <th>Prénom</th>
+            <th>Nom</th>
+            <th>Note Examen Final</th>
+            <th>Observations</th>
+        </tr>
+
+        <tbody>
+        <tr>
+            <td>1</td>
+            <td>Loïc</td>
+            <td>Moreno</td>
+            <td>16/20</td>
+            <td>Très Bien</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Alain</td>
+            <td>Durant</td>
+            <td>11/20</td>
+            <td>Moyen</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>Salim</td>
+            <td>Messaoui</td>
+            <td>14.50/20</td>
+            <td>Bien</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Mehdi</td>
+            <td>Legouloum</td>
+            <td>17/20</td>
+            <td>Excellent</td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>Erik</td>
+            <td>Ducro</td>
+            <td>10.50/20</td>
+            <td>Moyen</td>
+
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Anna</td>
+            <td>Vessereau</td>
+            <td>16.50/20</td>
+            <td>Très Bien</td>
+
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>Linda</td>
+            <td>Aissaoui</td>
+            <td>12/20</td>
+            <td>Moyen</td>
+        </tr>
+
+        </tbody>
+    </table>
+    <div class="card text-center">
+        <div class="col-sm">
+            Total des Etudiants Non Admis
+        </div>
+        <div class="container">
+            <div class="row">
+            </div>
+            <div class="table-responsive">
+                <table class="table">
+                </table>
+            </div>
+        </div>
         <table class="table table-bordered ">
-            <table class="table">
-                <thead>
-                <tr>
-                    <th> N°</th>
-                    <th>Prénom</th>
-                    <th>Nom</th>
+            <div class="card">
+                <div class="card-body">
+                </div>
+            </div>
+        </table>
+        <table class="table">
+            <div class="p-3 mb-2 bg-success text-whit"> Elèves Admis</div>
 
-                    <th>Email</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Loïc</td>
-                    <td>Moreno</td>
-                    <td>loicmoreno@mail.com</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Mehdi</td>
-                    <td>Legouloum</td>
-                    <td>mehdilegouloum@mail.com</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>Anna</td>
-                    <td>Vessereau</td>
-                    <td>annavessereau@mail.com</td>
-                </tr>
-                </tbody>
-            </table>
+            <tr>
+                <th> N°</th>
+                <th>Prénom</th>
+                <th>Nom</th>
+                <th>Note Examen Final</th>
+                <th>Observations</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Loïc</td>
+                <td>Moreno</td>
+                <td>16/20</td>
+                <td>Très Bien</td>
+
+            <tr>
+                <td>3</td>
+                <td>Anna</td>
+                <td>Vessereau</td>
+                <td>16.50/20</td>
+                <td>Très Bien</td>
+
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Mehdi</td>
+                <td>Legouloum</td>
+                <td>17/20</td>
+                <td>Excellent</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Salim</td>
+                <td>Messaoui</td>
+                <td>14.50/20</td>
+                <td>Bien</td>
+            </tr>
+
+        </table>
 
 
+        <div class="w-25 p-3" style="background-color: red;">Non Admis 15%</div>
+        <div class="w-50 p-3" style="background-color: aqua;">Admis 25%</div>
 
-
-
-
+</div>
 </body>
 </html>
+
+
