projet bootstrap maquette

--- a/index.html
+++ b/index.html
@@ -1,73 +1,71 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="
-    sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script crossorigin="anonymous" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM
-     " src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <meta charset="UTF-8">
+    <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="styles.css">
-    <title>Title</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 
-<body>
+<div class="text-center">
+<h1>ECOLE D'INFORMATIQUE</h1>
+</div>
+<div class="text-center">
+    <h2>WHITE RABBIT SCHOOL</h2>
+</div>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo
+5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdS
+JQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB
+1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 
-<h1>LISTE DES CLIENTS</h1>
-<div class="table-responsive">
-    <table class="table">
-        ...
-    </table>
+<div class="alert alert-primary" role="alert">
+    <span class="badge badge-pill badge-primary">Accueil</span>
+    <span class="badge badge-pill badge-secondary">Information</span>
+    <span class="badge badge-pill badge-success">Documentation</span>
+    <span class="badge badge-pill badge-danger">Videos</span>
+    <span class="badge badge-pill badge-warning">Exemple</span>
+    <span class="badge badge-pill badge-info">Blog</span>
 </div>
 
+<div class="alert alert-success" role="alert">
+    <h4 class="alert-heading">BONJOUR,</h4>
+    <p>Bien venu dans notre Ecole d'Informatique. Notre Ecole est innovante, différente et très sympatique,
+        Vous apprenderez avec simplicité et rire avec le prof, ambiance cool!!!!!</p>
+    <hr>
+    <p class="mb-0 text-center">INSCRIPTION MOIS DE SEPTEMBRE 2019</p>
+</div>
+
+
 <div class="container">
-    <div class="row">
-        <div class="col-sm">
-            One of three columns
+    <div class="row-center text-center">
+        <div class="col">
+           5 MOIS de COURS + 5 MOIS de STAGE
         </div>
-        <div class="col-sm">
-            One of three columns
+    </div>
+    <div class="row text-center">
+        <div class="col">
+            Cours HTML
         </div>
-        <div class="col-sm">
-            One of three columns
+        <div class="col text-center">
+            Cours CSS
+        </div>
+        <div class="col text-center">
+            Cours JavaScript
         </div>
     </div>
 </div>
 
-<table class="table table-bordered ">
-    <thead>
-    <tr>
-        <th> N°</th>
-        <th>Prénom</th>
-        <th>Nom</th>
-        <th>Email</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>1</td>
-        <td>Loïc</td>
-        <td>Moreno</td>
-        <td>loicmoreno@mail.com</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>Mehdi</td>
-        <td>Legouloum</td>
-        <td>mehdilegouloum@mail.com</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>Anna</td>
-        <td>Vessereau</td>
-        <td>annavessereau@mail.com</td>
-    </tr>
-    </tbody>
-</table>
+<div class="image text-center">
+    <img src="images.png" class="img-fluid-png" alt="Responsive image">
+</div>
+
+
 
 </body>
 </html>
+
