--- a/index.html
+++ b/index.html
@@ -4,68 +4,41 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="styles.css">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRV
+    zpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0C
+    pHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd
+    0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </head>
-
-<div class="text-center">
-<h1>ECOLE D'INFORMATIQUE</h1>
-</div>
-<div class="text-center">
-    <h2>WHITE RABBIT SCHOOL</h2>
-</div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo
-5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdS
-JQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB
-1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<body>
+<!--
+<div >
 
 
-<div class="alert alert-primary" role="alert">
-    <span class="badge badge-pill badge-primary">Accueil</span>
-    <span class="badge badge-pill badge-secondary">Information</span>
-    <span class="badge badge-pill badge-success">Documentation</span>
-    <span class="badge badge-pill badge-danger">Videos</span>
-    <span class="badge badge-pill badge-warning">Exemple</span>
-    <span class="badge badge-pill badge-info">Blog</span>
-</div>
 
-<div class="alert alert-success" role="alert">
-    <h4 class="alert-heading">BONJOUR,</h4>
-    <p>Bien venu dans notre Ecole d'Informatique. Notre Ecole est innovante, différente et très sympatique,
-        Vous apprenderez avec simplicité et rire avec le prof, ambiance cool!!!!!</p>
-    <hr>
-    <p class="mb-0 text-center">INSCRIPTION MOIS DE SEPTEMBRE 2019</p>
+<div class="image2">
+   <img src="src_assets_img_background-louis-vuitton.svg" class="img-fluid-svg" alt="responsive image">
 </div>
 
 
-<div class="container">
-    <div class="row-center text-center">
-        <div class="col">
-           5 MOIS de COURS + 5 MOIS de STAGE
-        </div>
-    </div>
-    <div class="row text-center">
-        <div class="col">
-            Cours HTML
-        </div>
-        <div class="col text-center">
-            Cours CSS
-        </div>
-        <div class="col text-center">
-            Cours JavaScript
-        </div>
-    </div>
 </div>
+-->
 
-<div class="image text-center">
-    <img src="images.png" class="img-fluid-png" alt="Responsive image">
+<div class="image">
+    <img src="background-trunk1.jpg" class="card-img-top" alt="image" width="100%" height="50%">
+    <div class="image1">
+        <span class="border-bottom"></span>
+        <img src="src_assets_img_background-louis-vuitton.svg" alt="image" width="100%" height="150%">
+
 </div>
-
-
-
+</div>
 </body>
 </html>
+w
 
