--- a/Maquette 2/index.html
+++ b/Maquette 2/index.html
@@ -2,9 +2,78 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRV
+    zpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0C
+    pHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd
+    p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <title>Title</title>
+
 </head>
 <body>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-1 background">
+
+            <h6 class="title">
+                1 0 0 1
+                MALLES
+            </h6>
+        </div>
+        <div class="col-sm-11">
+            <div class="row">
+                <div class="col-sm-12">
+
+                    <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+                    <div class="row justify-content-center background-2 border">
+                        <div class="col-sm-4">
+                            + Ajout objet
+                        </div>
+                        <div class="col-sm-4">
+                            + Proprietaire
+                        </div>
+                    </div>
+
+                    <div class="row background-2">
+                        <div class="col-sm-7">
+                            DERNIERES CONSULTATIONS
+                        </div>
+                        <hr width="100%" size="2" color="grey">
+                    </div>
+
+                    <div class="row background-2">
+                        <div class="col-sm-5">
+                            Malle 1977.987.78664
+                        </div>
+                    </div>
+                    <div class="row background-2">
+                        <div class="col-sm-5">
+                            Malle basse en toile Monogram
+                        </div>
+                        <hr width="100%" size="2" color="grey">
+                    </div>
+                    <div class="row background-2">
+                        <div class="col-sm-5">
+                            Malle lorem ipsum
+                        </div>
+                    </div>
+                    <div class="row background-2">
+                        <div class="col-sm-5">
+                            Malle basse en toile Monogram
+                        </div>
+                        <hr width="100%" size="2" color="grey">
+                    </div>
+                </div>
+            </div>
 
 </body>
 </html>
