--- a/Maquette 2/index.html
+++ b/Maquette 2/index.html
@@ -19,50 +19,53 @@
 <body>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-1 background">
+        <div class="col-sm-1 text-center background">
 
             <h6 class="title">
                 1 0 0 1
                 MALLES
             </h6>
+            <meta name="viewport" content="width=device-width, initial-scale=1">
+            <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+            <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
         </div>
         <div class="col-sm-11">
             <div class="row">
                 <div class="col-sm-12">
-
+                    <link rel="img-icone" type="image/png" href="/src_assets_img_icon-open.svg"/>
                     <form class="form-inline my-2 my-lg-0">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
                     </form>
                     <div class="row justify-content-center background-2 border">
-                        <div class="col-sm-4">
+                        <div class="col-4 border text-center">
                             + Ajout objet
                         </div>
-                        <div class="col-sm-4">
+                        <div class="col-4 border text-center">
                             + Proprietaire
                         </div>
                     </div>
 
                     <div class="row background-2">
-                        <div class="col-sm-7">
+                        <div class="col-7">
                             DERNIERES CONSULTATIONS
                         </div>
                         <hr width="100%" size="2" color="grey">
                     </div>
 
                     <div class="row background-2">
-                        <div class="col-sm-5">
+                        <div class="col-5">
                             Malle 1977.987.78664
                         </div>
                     </div>
                     <div class="row background-2">
-                        <div class="col-sm-5">
+                        <div class="col-5">
                             Malle basse en toile Monogram
                         </div>
                         <hr width="100%" size="2" color="grey">
                     </div>
                     <div class="row background-2">
-                        <div class="col-sm-5">
+                        <div class="col-5">
                             Malle lorem ipsum
                         </div>
                     </div>
