--- a/Maquette 2/index.html
+++ b/Maquette 2/index.html
@@ -6,78 +6,143 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="img-icone" type="image/png" href="/src_assets_img_icon-open.svg"/>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRV
-    zpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0C
-    pHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd
-    p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/d3607bbb57.js"></script>
     <title>Title</title>
 
 </head>
 <body>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-sm-1 text-center background">
-
-            <h6 class="title">
-                1 0 0 1
-                MALLES
-            </h6>
-
-        </div>
-        <div class="col-sm-11">
+<div class="container">
+    <div class="row ">
+        <div class="col-sm-2 background">
             <div class="row">
-                <div class="col-sm-12">
-                    <link rel="img-icone" type="image/png" href="/src_assets_img_icon-open.svg"/>
-                    <form class="form-inline my-2 my-lg-0">
-                        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                    </form>
-                    <div class="row justify-content-center background-2 border">
-                        <div class="col-4 border text-center">
-                            + Ajout objet
-                        </div>
-                        <div class="col-4 border text-center">
-                            + Proprietaire
-                        </div>
-                    </div>
+                <div class="col-sm-12 text-center background-1">
+                    <div class="text">
+                        <h2 class="font-weight-bolder">1 0 0 1</h2>
 
-                    <div class="row background-2">
-                        <div class="col-7">
-                            DERNIERES CONSULTATIONS
-                        </div>
-                        <hr width="100%" size="2" color="grey">
-                    </div>
-
-                    <div class="row background-2">
-                        <div class="col-5">
-                            Malle 1977.987.78664
-                        </div>
-                    </div>
-                    <div class="row background-2">
-                        <div class="col-5">
-                            Malle basse en toile Monogram
-                        </div>
-                        <hr width="100%" size="2" color="grey">
-                    </div>
-                    <div class="row background-2">
-                        <div class="col-5">
-                            Malle lorem ipsum
-                        </div>
-                    </div>
-                    <div class="row background-2">
-                        <div class="col-sm-5">
-                            Malle basse en toile Monogram
-                        </div>
-                        <hr width="100%" size="2" color="grey">
+                        <p class="font-weight-lighter">M A L L E S</p>
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-sm-12 background">
+                    <div class="text1">
+                        <h6><i class="fas fa-home"></i> Accueil </h6>
+                    </div>
+                    <div class="text2">
+                        <h6><i class="fas fa-suitcase"></i> collections </h6>
+                        <h6><i class="fas fa-user"></i> Propriétaires </h6>
+                        <h6><i class="fas fa-globe"></i> Emplacements </h6>
+                        <h6><i class="fas fa-tablet-alt"></i> Applications </h6>
+                        <h6><i class="far fa-clone"></i> Contenu génériques</h6>
+                        <div class="dropdown-divider"></div>
+                        <div>
+                            <h6><i class="fas fa-scroll"></i>Tickets
+                                <span class="badge badge-danger">09</span></h6>
+                        </div>
+                        <h6><i class="fas fa-bell"></i> Notifications </h6>
+                        <h6><i class="fas fa-shopping-basket"></i> Panier </h6>
+                        <h6><i class="fas fa-user-circle"></i> Profils</h6>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-10 background-2">
+
+            <div class="row ">
+                <div class="col-sm-12">
+
+                    <form class="form-inline my-2 my-lg-0">
+                        <input class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label=
+                                "Search">
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                    </form>
+
+                </div>
+            </div>
+            <div class="row text-center justify-content-center two-blocks background-2">
+                <div class="col-sm-2">
+                    <div class="border border-info">
+                        <i class="fas fa-suitcase"></i>
+                        <h6>+ AJOUT OBJET</h6>
+                    </div>
+                </div>
+                <div class="col-sm-3">
+                    <div class="border border-info">
+                        <i class="fas fa-user"></i>
+                        <h6> + AJOUT PROPRIETAIRE</h6>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-5">
+                    <h4>DERNIERES CONSULTATIONS</h4>
+                </div>
+            </div>
+            <div class="dropdown-divider color"></div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <h6>Malle 1999.0589744.741</h6>
+                    <h6>Malle basse en toile Monogram</h6>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <h6>Malle lorem ipsum</h6>
+                    <h6>Malle basse en toile Monogram</h6>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <h6>Nom du propriétaire lorem ipsum</h6>
+                </div>
+            </div>
+
+            <h2>Derniers Tickets</h2>
+            <p>Ticket N°8767543</p>
+            <div class="row">
+                <div class="col-sm-2">Traduction Histoire DE</div>
+                <div class="col-sm-3">Malle 1977.987.78664 Malle basse en toile Monogram</div>
+                <div class="col-sm-2">statut
+                    <p>Traduction finalisée</p></div>
+                <div class="col-sm-2">Action
+                    <p>valider le contenu</p>
+                </div>
+                <div class="col-sm-2 ">Echéance
+                    <p>22 avril 2017
+                    <p></p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-2">Traduction Histoire DE</div>
+                <div class="col-sm-3">Malle 1977.987.78664 Malle basse en toile Monogram</div>
+                <div class="col-sm-2">statut
+                    <p>Traduction finalisée</p></div>
+                <div class="col-sm-2">Action
+                    <p>valider le contenu</p>
+                </div>
+                <div class="col-sm-2">Echéance
+                    <p>22 avril 2017
+                    <p></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
