Maquette 2 ajout icone centralisation blocks

--- a/Maquette 2/index.html
+++ b/Maquette 2/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 <div class="container">
-    <div class="row ">
+    <div class="row">
         <div class="col-sm-2 background">
             <div class="row">
                 <div class="col-sm-12 text-center background-1">
@@ -50,31 +50,29 @@
                         <div class="dropdown-divider"></div>
                         <div>
                             <h6><i class="fas fa-scroll"></i>Tickets
-                                <span class="badge badge-danger">09</span></h6>
+                                <span class="badge badge-danger">9</span></h6>
                         </div>
-                        <h6><i class="fas fa-bell"></i> Notifications </h6>
-                        <h6><i class="fas fa-shopping-basket"></i> Panier </h6>
+                        <h6><i class="fas fa-bell"></i> Notifications<span class="badge badge-danger">2</span> </h6>
+                        <h6><i class="fas fa-shopping-basket"></i> Panier<span class="badge badge-danger">2</span></h6>
                         <h6><i class="fas fa-user-circle"></i> Profils</h6>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="col-sm-10 background-2">
-
-            <div class="row ">
-                <div class="col-sm-12">
-
+       </div>
+       <div class="col-sm-10 background-2">
+                <div class="row ">
+                    <div class="col-sm-12">
                     <form class="form-inline my-2 my-lg-0">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label=
                                 "Search">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Recherche</button>
                     </form>
-
                 </div>
-            </div>
-            <div class="row text-center justify-content-center two-blocks background-2">
+       </div>
+            <div class="row text-center justify-content-center two-blocks">
                 <div class="col-sm-2">
                     <div class="border border-info">
+
                         <i class="fas fa-suitcase"></i>
                         <h6>+ AJOUT OBJET</h6>
                     </div>
@@ -91,56 +89,91 @@
                     <h4>DERNIERES CONSULTATIONS</h4>
                 </div>
             </div>
-            <div class="dropdown-divider color"></div>
-            <div class="row">
-                <div class="col-sm-3">
-                    <h6>Malle 1999.0589744.741</h6>
-                    <h6>Malle basse en toile Monogram</h6>
-                    <hr>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-3">
-                    <h6>Malle lorem ipsum</h6>
-                    <h6>Malle basse en toile Monogram</h6>
-                    <hr>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-3">
-                    <h6>Nom du propriétaire lorem ipsum</h6>
-                </div>
-            </div>
+            <div class="dropdown-divider"></div>
 
-            <h2>Derniers Tickets</h2>
-            <p>Ticket N°8767543</p>
-            <div class="row">
-                <div class="col-sm-2">Traduction Histoire DE</div>
-                <div class="col-sm-3">Malle 1977.987.78664 Malle basse en toile Monogram</div>
-                <div class="col-sm-2">statut
-                    <p>Traduction finalisée</p></div>
-                <div class="col-sm-2">Action
-                    <p>valider le contenu</p>
+              <div class="row">
+                <div class="col-sm-3 style=">
+                    <h6><i class="fas fa-suitcase"></i> Malle 1999.0589744.741</h6>
+                    <h6>Malle basse en toile Monogram</h6>
+                    <hr>
                 </div>
-                <div class="col-sm-2 ">Echéance
-                    <p>22 avril 2017
-                    <p></p>
+              </div>
+              <div class="row">
+                <div class="col-sm-3">
+                    <h6><i class="fas fa-book"></i> Malle lorem ipsum</h6>
+
+                    <h6>Malle basse en toile Monogram</h6>
+                    <hr>
                 </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-3">
+                    <h6> <i class="fas fa-user"></i>Nom du propriétaire lorem ipsum</h6>
+                </div>
+              </div>
+              <div class="row">
+                  <div class="col-sm-6">
+                      <h4>DERNIERS TICKETS</h4>
+                      <div class="dropdown-divider"></div>
+                  </div>
+              </div>
+
+           <div class="row">
+               <div class="col-sm-3">
+                   <h6>TICKET N°786785231</h6>
+               </div>
+           </div>
+
+           <div class="row justify-content-center two-blocks">
+               <div class="col-sm-2 border border-brown">
+                   <h5>TRADUCTION HISTOIRE DE</h5>
+               </div>
+               <div class="col-sm-3 border border-brown">
+                   <h6>Malle 1977.987.78664</h6>
+                   <h6>Malle basse en toile monogram</h6>
+               </div>
+               <div class="col-sm-2 border border-brown">
+                   <h5>STATUT</h5>
+                   Traduction finalisée
+               </div>
+               <div class="col-sm-2 border border-brown">
+                   <h5>ACTION</h5>
+                   <h6>Valider le contenu</h6>
+               </div>
+               <div class="col-sm-2 border border-brown">
+                   <h5>ECHEANCE</h5>
+                   22 avril 2017
+               </div>
+           </div>
+
+           <div class="row">
+               <div class="col-sm-3">
+                   <h6>TICKET N°786785231</h6>
+               </div>
+           </div>
+
+           <div class="row justify-content-center two-blocks">
+               <div class="col-sm-2 border  border-brown">
+                   <h5>TRADUCTION HISTOIRE DE</h5>
+               </div>
+               <div class="col-sm-3 border border-brown">
+                   <h5>Malle 1977.977.845223</h5>
+                   Malle basse en toile monogram
+               </div>
+               <div class="col-sm-2 border border-brown">
+                   <h5>STATUT</h5>
+                   Traduction finalisée
+               </div>
+               <div class="col-sm-2 border border-brown">
+                   <h5>ACTION</h5>
+                   Valider le contenu
+               </div>
+               <div class="col-sm-2 border border-brown">
+                   <h5>ECHEANCE</h5>
+                   22 avril 2017
+               </div>
             </div>
-            <div class="row">
-                <div class="col-sm-2">Traduction Histoire DE</div>
-                <div class="col-sm-3">Malle 1977.987.78664 Malle basse en toile Monogram</div>
-                <div class="col-sm-2">statut
-                    <p>Traduction finalisée</p></div>
-                <div class="col-sm-2">Action
-                    <p>valider le contenu</p>
-                </div>
-                <div class="col-sm-2">Echéance
-                    <p>22 avril 2017
-                    <p></p>
-                </div>
-            </div>
-        </div>
+       </div>
     </div>
 </div>
 
