--- a/Maquette 2/index.html
+++ b/Maquette 2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -31,45 +31,53 @@
                 <div class="col-sm-12 text-center background-1">
                     <div class="text">
                         <h2 class="font-weight-bolder">1 0 0 1</h2>
-
                         <p class="font-weight-lighter">M A L L E S</p>
                     </div>
                 </div>
             </div>
+            <div class="dropdown-divider"></div>
             <div class="row">
                 <div class="col-sm-12 background">
                     <div class="text1">
                         <h6><i class="fas fa-home"></i> Accueil </h6>
                     </div>
-                    <div class="text2">
+                    <div class="text2 padding">
+
                         <h6><i class="fas fa-suitcase"></i> collections </h6>
                         <h6><i class="fas fa-user"></i> Propriétaires </h6>
                         <h6><i class="fas fa-globe"></i> Emplacements </h6>
                         <h6><i class="fas fa-tablet-alt"></i> Applications </h6>
                         <h6><i class="far fa-clone"></i> Contenu génériques</h6>
                         <div class="dropdown-divider"></div>
-                        <div>
+
                             <h6><i class="fas fa-scroll"></i>Tickets
-                                <span class="badge badge-danger">9</span></h6>
-                        </div>
-                        <h6><i class="fas fa-bell"></i> Notifications<span class="badge badge-danger">2</span> </h6>
-                        <h6><i class="fas fa-shopping-basket"></i> Panier<span class="badge badge-danger">2</span></h6>
+                            <span class="badge badge-danger float-right m-1">9</span></h6>
+                        <h6><i class="fas fa-bell"></i> Notifications<span class="badge badge-danger float-right m-1">2
+                        </span></h6>
+                        <h6><i class="fas fa-shopping-basket"></i> Panier<span class="badge badge-danger float-right
+                         m-1">2</span></h6>
                         <h6><i class="fas fa-user-circle"></i> Profils</h6>
+                    </div>
+                    <div class="mx-auto" style="width: 50px;">
+                      <div class="text-center4">
+                        <img src="stephanie_tartare.jpg " alt="img" class="image rounded-circle">
+                         <div class="text-center5"><h6>Mon compte</h6></div>
+                      </div>
                     </div>
                 </div>
             </div>
-       </div>
-       <div class="col-sm-10 background-2">
-                <div class="row ">
-                    <div class="col-sm-12">
+        </div>
+        <div class="col-sm-10 background-2">
+            <div class="row ">
+                <div class="col-sm-12">
                     <form class="form-inline my-2 my-lg-0">
                         <input class="form-control mr-sm-2" type="search" placeholder="Search..." aria-label=
                                 "Search">
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Recherche</button>
                     </form>
                 </div>
-       </div>
-            <div class="row text-center justify-content-center two-blocks">
+            </div>
+            <div class="row text-center justify-content-center two-blocks  background3">
                 <div class="col-sm-2">
                     <div class="border border-info">
 
@@ -86,94 +94,110 @@
             </div>
             <div class="row">
                 <div class="col-sm-5">
-                    <h4>DERNIERES CONSULTATIONS</h4>
+                    <h6>DERNIERES CONSULTATIONS</h6>
                 </div>
             </div>
             <div class="dropdown-divider"></div>
-
-              <div class="row">
+            <div class="row">
                 <div class="col-sm-3 style=">
-                    <h6><i class="fas fa-suitcase"></i> Malle 1999.0589744.741</h6>
+                    <i class="fas fa-suitcase"></i><h6>Malle 1999.0589744.741</h6>
                     <h6>Malle basse en toile Monogram</h6>
-                    <hr>
+
                 </div>
-              </div>
-              <div class="row">
+            </div>
+            <div class="dropdown-divider"></div>
+            <div class="row">
                 <div class="col-sm-3">
                     <h6><i class="fas fa-book"></i> Malle lorem ipsum</h6>
-
                     <h6>Malle basse en toile Monogram</h6>
-                    <hr>
+
                 </div>
-              </div>
-              <div class="row">
-                <div class="col-sm-3">
-                    <h6> <i class="fas fa-user"></i>Nom du propriétaire lorem ipsum</h6>
-                </div>
-              </div>
-              <div class="row">
-                  <div class="col-sm-6">
-                      <h4>DERNIERS TICKETS</h4>
-                      <div class="dropdown-divider"></div>
-                  </div>
-              </div>
-
-           <div class="row">
-               <div class="col-sm-3">
-                   <h6>TICKET N°786785231</h6>
-               </div>
-           </div>
-
-           <div class="row justify-content-center two-blocks">
-               <div class="col-sm-2 border border-brown">
-                   <h5>TRADUCTION HISTOIRE DE</h5>
-               </div>
-               <div class="col-sm-3 border border-brown">
-                   <h6>Malle 1977.987.78664</h6>
-                   <h6>Malle basse en toile monogram</h6>
-               </div>
-               <div class="col-sm-2 border border-brown">
-                   <h5>STATUT</h5>
-                   Traduction finalisée
-               </div>
-               <div class="col-sm-2 border border-brown">
-                   <h5>ACTION</h5>
-                   <h6>Valider le contenu</h6>
-               </div>
-               <div class="col-sm-2 border border-brown">
-                   <h5>ECHEANCE</h5>
-                   22 avril 2017
-               </div>
-           </div>
-
-           <div class="row">
-               <div class="col-sm-3">
-                   <h6>TICKET N°786785231</h6>
-               </div>
-           </div>
-
-           <div class="row justify-content-center two-blocks">
-               <div class="col-sm-2 border  border-brown">
-                   <h5>TRADUCTION HISTOIRE DE</h5>
-               </div>
-               <div class="col-sm-3 border border-brown">
-                   <h5>Malle 1977.977.845223</h5>
-                   Malle basse en toile monogram
-               </div>
-               <div class="col-sm-2 border border-brown">
-                   <h5>STATUT</h5>
-                   Traduction finalisée
-               </div>
-               <div class="col-sm-2 border border-brown">
-                   <h5>ACTION</h5>
-                   Valider le contenu
-               </div>
-               <div class="col-sm-2 border border-brown">
-                   <h5>ECHEANCE</h5>
-                   22 avril 2017
-               </div>
             </div>
-       </div>
+            <div class="dropdown-divider"></div>
+            <div class="row">
+                <div class="col-sm-3">
+                    <h6><i class="fas fa-user"></i>Nom du propriétaire lorem ipsum</h6>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6">
+                    <h6>DERNIERS TICKETS</h6>
+                    <div class="dropdown-divider"></div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-3">
+                    <h6>TICKET N°786785231</h6>
+                </div>
+            </div>
+
+            <div class="row justify-content-center two-blocks">
+                <div class="col-sm-2 border border-brown">
+                    <h6>TRADUCTION HISTOIRE DE</h6>
+                </div>
+                <div class="col-sm-3 border border-brown">
+                    <h6>Malle 1977.987.78664</h6>
+                    <h6>Malle basse en toile monogram</h6>
+                </div>
+                <div class="col-sm-2 border border-brown">
+                    <h6>STATUT</h6>
+                    <h6>
+                        <small class="text-muted">Traduction finalisée</small>
+                    </h6>
+
+                    <h6></h6>
+                </div>
+                <div class="col-sm-2 border border-brown">
+                    <h6>ACTION</h6>
+                    <h6>
+                        <small class="text-muted; display-6 text-danger p-md-6">Valider le contenu</small>
+                    </h6>
+
+                </div>
+                <div class="col-sm-2 border border-brown">
+                    <h6>ECHEANCE</h6>
+                    <h6>
+                        <small class="text-muted">22 avril 2017</small>
+                    </h6>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm-3">
+                    <h6>TICKET N°786785231</h6>
+                </div>
+            </div>
+
+            <div class="row justify-content-center two-blocks">
+                <div class="col-sm-2 border  border-brown">
+                    <h6>TRADUCTION HISTOIRE DE</h6>
+                </div>
+                <div class="col-sm-3 border border-brown">
+                    <h6>Malle 1977.977.845223</h6>
+                    <h6>Malle basse en toile monogram</h6>
+                </div>
+                <div class="col-sm-2 border border-brown">
+                    <h6>STATUT</h6>
+                    <h6>
+                        <small class="text-muted">Traduction finalisée</small>
+                    </h6>
+
+                </div>
+                <div class="col-sm-2 border border-brown">
+                    <h6>ACTION</h6>
+                    <h6>
+                        <small class="text-muted; display-6 text-danger p-md-6">Valider le contenu</small>
+                    </h6>
+                </div>
+                <div class="col-sm-2 border border-brown">
+                    <h6>ECHEANCE</h6>
+                    <h6>
+                        <small class="text-muted">22 avril 2017</small>
+                    </h6>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
